--- a/kandi/bib.bib
+++ b/kandi/bib.bib
@@ -14,7 +14,6 @@
   title={On the theory of order statistics},
   journal={Acta Mathematica Academiae Scientiarum Hungarica},
   year={1953},
-  month={Sep},
   volume={4},
   number={3},
   pages={191--231},
@@ -30,7 +29,7 @@
   year={2006},
   publisher={World Scientific Publishing Co.},
   address={Singapore},
-  edition={second edition}
+  edition={second}
 }
 
 @book{lahiri,
@@ -47,7 +46,6 @@
 @book{resnick,
   title={Heavy-Tail Phenomena: Probabilistic and Statistical Modeling},
   author={Resnick, Sidney I.},
-  number={nid. 10},
   isbn={9780387242729},
   lccn={2006934621},
   series={Springer Series in Operations Research and Financial Engineering},
@@ -161,6 +159,7 @@
 }
 
 @article{hausler,
+  title={On asymptotic normality of Hill's estimator for the exponent of regular variation},
   ISSN={00905364},
   URL={http://www.jstor.org/stable/2241207},
   author={E. Haeusler and J. L. Teugels},
@@ -168,13 +167,12 @@
   number={2},
   pages={743--756},
   publisher={Institute of Mathematical Statistics},
-  title={On Asymptotic Normality of Hill's Estimator for the Exponent of Regular Variation},
   volume={13},
   year={1985}
 }
 
 @book{embrechts,
-  title={Modelling Extremal Events: for Insurance and Finance},
+  title={Modelling Extremal Events for Insurance and Finance},
   author={Embrechts, P. and Kl{\"u}ppelberg, C. and Mikosch, T.},
   isbn={9783540609315},
   lccn={97012308},
@@ -251,9 +249,9 @@
 
 @article{potter,
   author={Potter, H. S. A.},
-  title={The Mean Values of Certain Dirichlet Series, II},
+  title={The Mean Values of Certain Dirichlet Series II},
   journal={Proceedings of the London Mathematical Society},
-  volume={s2-47},
+  volume={47},
   number={1},
   pages={1-19},
   year={1942},
@@ -262,3 +260,15 @@
   eprint={https://londmathsoc.onlinelibrary.wiley.com/doi/pdf/10.1112/plms/s2-47.1.1}
 }
 
+@article{geluk,
+  title={Second-order regular variation, convolution and the central limit theorem},
+  journal={Stochastic Processes and their Applications},
+  volume={69},
+  number={2},
+  pages={139 - 159},
+  year={1997},
+  issn={0304-4149},
+  doi={https://doi.org/10.1016/S0304-4149(97)00042-2},
+  url={http://www.sciencedirect.com/science/article/pii/S0304414997000422},
+  author={J. Geluk and L. de Haan and S. Resnick and C. Stărică}
+}
