--- a/kandi/kandi.tex
+++ b/kandi/kandi.tex
@@ -471,7 +471,7 @@ Let $X_1, X_2,...$ be i.d.d. random variables with cdf $F_X$. Suppose $F_X \in D
 \label{hillcons}
 \end{theorem}
 
-For the proof of the above theorem following lemmas and Corollary \ref{inequality} are needed, firstly the Renyi's representation \cite{renyi}.
+For the proof of the above theorem following lemmas and Corollary \ref{inequality} are needed, firstly the R{\'e}nyi's representation \cite{renyi}.
 \begin{lemma}
 If $E_1, E_2,...$ are i.d.d. random variables from the standard exponential distribution and $E_{1,n} \leq E_{2,n} \leq ... \leq E_{n,n}$ then for $k \leq n$ we have
 \begin{multline*}
@@ -486,7 +486,7 @@ where $E_1^*,E_2^*,...$ are i.d.d. random variables from standard exponential di
 \label{renrep}
 \end{lemma}
 
-With Renyi's representation the complicated joint distribution of dependent order statistics can be represented in terms of independent random variables. Proof of the Renyi's representation is omitted here.
+With R{\'e}nyi's representation the complicated joint distribution of dependent order statistics can be represented in terms of independent random variables. Proof of the R{\'e}nyi's representation is omitted here.
 
 Secondly a lemma about the order statistics of Pareto distribution is necessary \cite{deHaan}.
 
@@ -525,7 +525,7 @@ The almost sure convergence of the Hill estimator is also proved in \cite{mason}
 \subsection{Asymptotic Normality}
 
 
-In addition to the first-order regular variation \ref{regularDef} there is a second-order condition for regular variation, which allows to examine the rates of converge of the first-order condition. Second-order regular variation is needed for the asymptotic normality of the Hill estimator. For the complete definition of second-order regular variation see \cite{geluk}. We define second-order regular variation for case $\gamma > 0$, since it is sufficient for our purposes \cite{deHaan}.
+In addition to the first-order regular variation \ref{regularDef} there is a second-order condition for regular variation, which allows to examine the rates of converge of the first-order condition. Second-order regular variation is needed for the asymptotic normality of the Hill estimator. We define second-order regular variation for case $\gamma > 0$, since it is sufficient for our purposes \cite{deHaan}. For the complete definition see \cite{geluk}.
 
 \begin{definition}
 U is second-order regularly varying for parameters $\gamma>0$ and $\rho \leq 0$ if for $x>0$
@@ -942,7 +942,7 @@ Therefore we can write
 \begin{equation*}
 \frac{1}{k} \sum_{i=0}^{k-1} \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big) = \frac{1}{k} \sum_{i=0}^{k-1} E_{n-i,n} - E_{n-k,n},
 \end{equation*}
-where $E_1, E_2,...$ are i.d.d. random variables with a standard exponential distribution. Now Renyi's representation \ref{renrep} implies
+where $E_1, E_2,...$ are i.d.d. random variables with a standard exponential distribution. Now R{\'e}nyi's representation \ref{renrep} implies
 
 \begin{equation*}
 \begin{split}
