--- a/kandi/kandi.tex
+++ b/kandi/kandi.tex
@@ -107,7 +107,7 @@ bookmarksnumbered=true
 %% slightly longer space follows, but what is desired is a regular interword
 %% space.
 %%
-\supervisor{Ph.D  Pauliina Ilmonen}
+\supervisor{Prof.  Pauliina Ilmonen}
 %%
 
 %% Advisor(s)---two at the most---of the thesis. Check with your supervisor how
@@ -203,7 +203,23 @@ We review the proof of the Hill estimator's consistency. Properties of the regul
 %	\abstracttext{}
 %\end{abstractpage}
 
-
+\newpage
+%%
+%% Abstract in Finnish.  Delete if you don't need it. 
+%%
+\thesistitle{Hill-estimaattorin asymptoottiset ominaisuudet}
+\advisor{DI Matias Heikkilä}
+\degreeprogram{Teknillinen fysiikka ja matematiikka}
+%\department{Elektroniikan ja nanotekniikan laitos}
+\major{Matematiikka ja systeemianalyysi}
+%% The keywords need not be separated by \spc now.
+\keywords{Hill-estimaattori, ääriarvoteoria, asymptoottiset ominaisuudet, tilastotiede}
+%% Abstract text
+\begin{abstractpage}[finnish]
+  Tiivistelmässä on lyhyt selvitys
+  kirjoituksen tärkeimmästä sisällöstä: mitä ja miten on tutkittu,
+  sekä mitä tuloksia on saatu. 
+\end{abstractpage}
 
 %\newpage
 
@@ -279,11 +295,11 @@ Heavy-tailed distributions appear in many fields of science such as insurance an
 Analyzing the tail is challenging since using classical methods, such as empirical quantiles, it is impossible to extrapolate beyond the available data. This motivates the use of Extreme Value Theory (EVT), that provides a rigorous mathematical framework to study extremes. EVT characterizes the behavior of the distribution's tail and tail estimation is often of high practical importance.
 
 One of the possible estimators for extreme value index is the Hill estimator, which was introduced by Bruce M. Hill in 1975 \cite{hill} and remains one of the most used tail estimators for heavy-tailed distributions.
-In this article we will review asymptotic properties of the Hill estimator and particularly its consistency.
+In this thesis work we will review asymptotic properties of the Hill estimator and particularly its consistency.
 
-Regularly varying functions form the mathematical foundation for the theory of heavy-tailed distributions and consequently they play an important role in the theory of the Hill estimator. We carefully review their properties in addition to consistency of the Hill estimator. We also examine consistency of the Hill estimator by performing Monte Carlo simulations. Results for asymptotic normality of the Hill estimator are provided but won’t be discussed in detail.
+Regularly varying functions form the mathematical foundation for the theory of heavy-tailed distributions and consequently they play an important role in the theory of the Hill estimator. We carefully review their properties in addition to consistency of the Hill estimator. We also examine finite sample properties of the Hill estimator by performing Monte Carlo simulations. Results for asymptotic normality of the Hill estimator are provided but won’t be discussed in detail.
 
-The rest of the article is organized as follows. Section \ref{backround} gives requisites for the proofs and theory of the Hill estimator including properties of heavy tailed functions. Section \ref{hillEst} represents the main result, which is consistency and necessary lemmas for the proof of the consistency. Simulations are presented in Section \ref{simut} and concluding remarks are given in Section \ref{conclusion}. Lastly, all the proofs and figures are found in Appendixes \ref{proofs} and \ref{figures}.
+The rest of the thesis is organized as follows. Section \ref{backround} gives requisites for the proofs and theory of the Hill estimator including properties of heavy tailed functions. Section \ref{hillEst} reviews the results of consistency and provides necessary lemmas for the proof of the consistency. Simulations are presented in Section \ref{simut} and concluding remarks are given in Section \ref{conclusion}. Lastly, all the proofs are found in Appendix \ref{proofs}.
 
 %\begin{definition}
 %\begin{equation*}
@@ -309,7 +325,7 @@ The rest of the article is organized as follows. Section \ref{backround} gives r
 \subsection{Fisher-Tippett-Gnedenko Theorem}
 \label{domains}
 
-Let $X_1, X_2, ..., X_n$ be i.d.d. random variables with a cdf $F$. Consider the  sample maxima $M_n = \max(X_1, X_2, ..., X_n)$. The limiting behavior of $M_n$ is trivial: Since $X_1, X_2,..., X_3$ are i.d.d.
+Let $X_1, X_2, ..., X_n$ be i.d.d. random variables with a cdf $F$. Consider the  sample maxima $M_n = \max(X_1, X_2, ..., X_n)$. The limiting behavior of $M_n$ can be derived since $X_1, X_2,..., X_3$ are i.d.d.
 \begin{gather*}
 P(\max(X_1, X_2, ... , X_n) \leq x) = P(X_1 \leq x, X_2 \leq x,..., X_n \leq x) \\ = 
 P(X_1 \leq x) P(X_2 \leq x) ... P(X_n \leq x)
@@ -326,7 +342,7 @@ Now,
 
 
 
-To achieve a nondegerate distribution it is necessary to normalize the sample maxima $M_n$. The Fisher-Tippett-Gnedenko Theorem states that with a suitable normalization a nondegenate distribution is obtained \cite{fisher} \cite{gnedenko}.
+To achieve a nondegerate distribution it is necessary to normalize the sample maxima $M_n$. The Fisher-Tippett-Gnedenko Theorem states that with a suitable normalization, a nondegenate distribution is obtained \cite{fisher} \cite{gnedenko}.
 
 \begin{theorem}
 There exists real constants $a_n>0$ and $b_n \in \mathbb{R}$ such that 
@@ -350,7 +366,7 @@ If F satisfies the Equation \eqref{fisher} for some $\gamma \in \mathbb{R}$ then
 
 We are especially interested in heavy-tailed distributions, i.e. the case $F \in D(G_{\gamma})$, with $\gamma>0$. It turns out that $F$ being heavy-tailed is equivalent to the function $1-F$ being regularly varying with index $-1/ \gamma$. In other words, if the tail function $1-F$ of a distribution is regularly varying then the distribution $F$ is heavy tailed and vice versa. \cite{deHaan}
 
-\begin{theorem}
+\begin{theorem}[{\cite[Theorem 1.2.1]{deHaan}}]
 Cdf F is in the maximum domain of attraction of the extreme value distribution $G_{\gamma}$ with $\gamma>0$ if and only if $x^*=\infty$ and
 \begin{equation}
 \lim_{t\rightarrow \infty} \frac{1-F(tx)}{1-F(t)} = x^{-\frac{1}{\gamma}}, x>0.
@@ -360,7 +376,7 @@ Cdf F is in the maximum domain of attraction of the extreme value distribution $
 
 In addition, \eqref{tail} can be written in a different form in terms of a left-continuous inverse $U=(1/(1-F))^{\leftarrow}$ \cite{deHaan}.
 
-\begin{corollary}
+\begin{corollary}[{\cite[Corollary 1.2.10]{deHaan}}]
 Condition \eqref{tail} is equivalent to
 \begin{equation}
 \lim_{t \rightarrow \infty} \frac{U(tx)}{U(t)} = x^{\gamma}, x>0.
@@ -388,7 +404,7 @@ If a function $f$  is regularly varying with index $\alpha=0$ then $f$ is said t
 
 
 
-\begin{theorem}
+\begin{theorem}[{\cite[Theorem B.1.4]{deHaan}}]
 If $f \in RV_{\alpha}$ then the convergence in the equation \eqref{regular} is uniform .
 \begin{equation*}
 \lim_{t \rightarrow \infty} \sup_{x  \in [a,b]} \left| \frac{f(tx)}{f(t)} - x^{\alpha} \right| = 0,
@@ -401,7 +417,7 @@ for $0<a<b<\infty$.
 
 By uniform convergence it can be proved that all the regularly varying functions can be represented in certain form \cite{deHaan}:
 
-\begin{theorem}[Karamata's representation theorem]
+\begin{theorem}[{\cite[Theorem B.1.6]{deHaan}}]
 If $f \in RV_{\alpha}$ then there exists measurable functions $a: \mathbb{R^+} \rightarrow \mathbb{R}$ and $c: \mathbb{R^+} \rightarrow \mathbb{R}$ with
 \begin{equation}
 \lim_{t \rightarrow \infty} c(t) = c_0 \  \text{and} \  \lim_{t \rightarrow \infty} a(t) = \alpha
@@ -418,7 +434,7 @@ Conversely, if \eqref{karam} holds with $a$ and $c$ satisfying \eqref{ac}, then 
 
 For the proof of the above theorem following lemma about the integrals of the regularly varying functions is needed \cite{deHaan}.
 
-\begin{lemma}
+\begin{lemma}[{\cite[Theorem B.1.5]{deHaan}}]
 Suppose $f \in RV_{\alpha}$. There exists $t_0 > 0$ such that $f(t)$ is positive and locally bounded for $t \geq t_0$. If $\alpha \geq -1$ then
 \begin{equation}
 \lim_{t \rightarrow \infty} \frac{tf(t)}{\int_{t_0}^{t}f(s) \, \mathrm{d}s} = \alpha + 1.
@@ -492,7 +508,7 @@ With R{\'e}nyi's representation the complicated joint distribution of dependent 
 
 Secondly a lemma about the order statistics of Pareto distribution is necessary \cite{deHaan}.
 
-\begin{lemma}
+\begin{lemma}[{\cite[Lemma 3.2.1]{deHaan}}]
 Let $Y_1, Y_2, ...$ be i.d.d. random variables from Pareto distribution $F_Y(y)=1-\frac{1}{y}$, $y \geq 1$ and let $Y_{1,n} \geq Y_{2,n} \geq ... \geq Y_{n,n}$ be the nth order statistics. Then if $k=k(n)  \rightarrow \infty$, $k/n \rightarrow 0$ as $n \rightarrow \infty$,
 
 \begin{equation*}
@@ -560,7 +576,7 @@ From Theorem \ref{normality} it can be seen that for Hill estimator to be asympt
 \section{Simulations}
 \label{simut}
 
-The consistency of the Hill estimator is studied with a Monte Carlo simulation. We simulate observations from the Pareto distribution with an extreme value index $\gamma=1/3$ and Cauchy distribution ($\gamma=1$, as can be checked with Equation \eqref{tail} or \eqref{Utail}). We simulate $N=2000$ sets of $n_i$ observations from both distributions where $n_i=100+50(i-1), i=1,2,...,399$. Hence the sample size is a vector from 100 to 20000 with steps of 50. We denote this vector with $\textbf{n}=(100,150,...,20000)$. For each $n_i$ we calculate $N$ number of estimates $\hat{\gamma}$ with $k=k(n)=o(n)$. For k we chose $k(n)=\left \lfloor \sqrt{n} \right \rfloor$, thus the condition $k=o(n)$ is fulfilled. Results are shown in Figures \ref{pareto} and \ref{cauchy}. Below is a summary of simulation settings.
+The finite sample properties of the Hill estimator are studied with a Monte Carlo simulation. We simulate observations from the Pareto distribution with an extreme value index $\gamma=1/3$ and Cauchy distribution ($\gamma=1$, as can be checked with Equation \eqref{tail} or \eqref{Utail}). We simulate $N=2000$ sets of $n_i$ observations from both distributions where $n_i=100+50(i-1), i=1,2,...,399$. Hence the sample size is a vector from 100 to 20000 with steps of 50. We denote this vector with $\textbf{n}=(100,150,...,20000)$. For each $n_i$ we calculate $N$ number of estimates $\hat{\gamma}$ with $k=k(n)=o(n)$. For k we chose $k(n)=\left \lfloor \sqrt{n} \right \rfloor$, thus the condition $k=o(n)$ is fulfilled. Results are shown in Figures \ref{pareto} and \ref{cauchy}. Below is a summary of simulation settings.
 
 \ctable[caption={Simulation settings.}, pos={H}, label={setup}, center]{ccccccc}{}{
 \toprule
@@ -576,6 +592,22 @@ Both resulting graphs are constructed in the same manner. Real value of the extr
 In Figure \ref{pareto} it seems that with small $n$ convergence is very fast and slows down after a while. This can be seen by looking at the quartiles. At the beginning the quartiles squeeze around $\gamma$ but eventually after about $n=12500$ it is hard to see any further convergence.
 
 In Figure \ref{cauchy} we can conclude that convergence is fast with small numbers of observations but slows down eventually, as in Figure \ref{pareto}. It seems that the median is a little further from $\gamma$ than in Figure \ref{pareto}. This suggests that for Cauchy distribution larger sample size is needed for an accurate estimate for $\gamma$ than for Pareto distribution. In both Figures \ref{pareto} and \ref{cauchy} quartiles are equally far away from median which suggests that asymptotic distribution of the Hill estimator might be symmetrical.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=\textwidth]{pareto.pdf}
+\caption{A plot of the median, the first quartile and the third quartile of simulated values of the Hill estimator under the Pareto distribution with extreme value index $\gamma=1/3$. The observed quantities are plotted against the sample size. The used threshold was $k(n) = \left\lfloor \sqrt{n} \right\rfloor$ and each sample size was simulated 2000 times. The correct value of the extreme value index is displayed as a dashed line.}
+\label{pareto}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=\textwidth]{cauchy.pdf}
+\caption{A plot of the median, the first quartile and the third quartile of simulated values of the Hill estimator under the Cauchy distribution. The observed quantities are plotted against the sample size. The used threshold was $k(n) = \left\lfloor \sqrt{n} \right\rfloor$ and each sample size was simulated 2000 times. The correct value of the extreme value index is displayed as a dashed line.}
+\label{cauchy}
+\end{center}
+\end{figure}
 
 
 \clearpage
@@ -606,6 +638,8 @@ Finally, we note that the Hill estimator can be extended in various ways. For ex
 
 
 \section{Proofs}
+All the proofs except the proof of Lemma \ref{U} follow proofs given in \cite{deHaan}. Some details are added.
+
 \label{proofs}
 \subsection{Proof of Theorem \ref{uniform}}
 
@@ -968,27 +1002,6 @@ by the weak law of large numbers \cite{rosenthal}. Notice that the expected valu
 
 
 \end{proof}
-
-\section{Figures}
-\label{figures}
-
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=\textwidth]{pareto.pdf}
-\caption{A plot of the median, the first quartile and the third quartile of simulated values of the Hill estimator under the Pareto distribution with extreme value index $\gamma=1/3$. The observed quantities are plotted against the sample size. The used threshold was $k(n) = \left\lfloor \sqrt{n} \right\rfloor$ and each sample size was simulated 2000 times. The correct value of the extreme value index is displayed as a dashed line.}
-\label{pareto}
-\end{center}
-\end{figure}
-
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=\textwidth]{cauchy.pdf}
-\caption{A plot of the median, the first quartile and the third quartile of simulated values of the Hill estimator under the Cauchy distribution. The observed quantities are plotted against the sample size. The used threshold was $k(n) = \left\lfloor \sqrt{n} \right\rfloor$ and each sample size was simulated 2000 times. The correct value of the extreme value index is displayed as a dashed line.}
-\label{cauchy}
-\end{center}
-\end{figure}
-
-
 
 
 \end{document}
